*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.21 ===
* Added empty text property for edit.
* Fixed illegal memory access when destroying Box, Grid and Menu widgets.
* Updated build scripts.

=== 1.0.20 ===
* Added possibility to control the value set to RangeFloat and Float properties.
* Fixed illegal memory access when destroying Box, Grid and Menu widgets.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.19 ===
* Optimized work with atoms.
* Many code updates that could cause potential problems related to using another
  decimal point for floating-point number formatting.
* FileDialog now synchronizes the state of selected_filter property.
* Implemented widget overrides by priority on the graph widget.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.18 ===
* Updated module versions in dependencies.

=== 1.0.17 ===
* Updated module versions in dependencies.

=== 1.0.16 ===
* Added 'zero' property to tk::GraphAxis to associate the position of origin on
  the axis with some value.
* Updated module versions in dependencies.

=== 1.0.15 ===
* Updated module versions in dependencies.

=== 1.0.14 ===
* Improved code base by using PVS Studio static code analyzer.
* Fixed several issues reported by PVS Studio static analyzer.
* Added tk::Menu::showmp method to show menu at current mouse cursor's position
  as a window transient for specified widget.
* Updated module versions in dependencies.

=== 1.0.13 ===
* Several fixes and optimizations related to tk::LedMeterChannel and tk::LedMeter.
* Fixed bug in tk::TabControl widget destruction.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.12 ===
* Added 'Editable' property to tk::Knob widget.
* Optimized window move operation (does not require realize if window size did
  not change).