@@ -5,6 +5,7 @@
 === 1.0.21 ===
 * Added empty text property for edit.
 * Fixed illegal memory access when destroying Box, Grid and Menu widgets.
+* Added tab.pointer property to the tk::TabControl.
 * Updated build scripts.
 
 === 1.0.20 ===
